<resources>
    <string name="app_name">TakeMyNote</string>

    <!--    Generics-->
    <string name="text_email">Email</string>
    <string name="text_password">Senha</string>
    <string name="text_register_account">Criar conta</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente.</string>

    <!--    Login Fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_password_empty_login_fragment">Informe sua senha.</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail.</string>

    <!--    Recover Account Fragment-->
    <string name="text_btn_recover_account_fragment">Recuperar</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte</string>

    <!--    Form Note Fragment-->
    <string name="text_title_form_note_fragment">Nova tarefa</string>
    <string name="text_description_form_note_fragment">Descrição</string>
    <string name="text_status_form_note_fragment">Status</string>
    <string name="text_btn_save_note_form_note_fragment">Salvar</string>

    <!--    Todo Fragment-->
    <string name="text_note_list_empty_todo_fragment">Nenhuma tarefa cadastrada.</string>

    <!--    Doing Fragment-->
    <string name="text_note_list_empty_doing_fragment">Nenhuma tarefa cadastrada.</string>

    <!--    Done Fragment-->
    <string name="text_note_list_empty_done_fragment">Nenhuma tarefa cadastrada.</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

</resources>